2010-06-15  Alexander Hansen <alexkhansen@users.sourceforge.net>

    * Bootstrap.pm:  Add OS 10.6.4 as a supported version.

2010-06-03  Alexander Hansen <alexkhansen@users.sourceforge.net>

    * Bootstrap.pm:  Add OS 10.6.3 as a supported version.

2010-05-16  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: more flexible otool calls
	* PkgVersion.pm: output of diagnostics during progressbar
	* PkgVersion.pm: type:perl installscript modernization
	* Checksum.pm, Configure.pm: doc tweaks
	* Bootstrap.pm, Configure.pm, Notify.pm: whitespace cleanup

2010-01-15  David Fang  <fangism@users.sourceforge.net>

	* PkgVersion.pm: compiler_wrapper finds %p/bin for ccache-default

2010-01-06  Daniel Macks  <dmacks@netspace.org>

	* all: update copyright

2009-11-29  Augusto Devegili  <monipol@users.sourceforge.net>

	* Validation.pm: New UseMaxBuildJobs field

2009-11-24  Augusto Devegili  <monipol@users.sourceforge.net>

	* Configure.pm, PkgVersion.pm: New MaxBuildJobs fink.conf entry and
	UseMaxBuildJobs package description field as an opt-in for
	MAKEFLAGS += -j

2009-11-21  Augusto Devegili  <monipol@users.sourceforge.net>

	* PkgVersion.pm: Handle the Commercial licence

2009-11-09  Alexander Hansen  <alexkhansen@users.sourceforge.net>

	* Bootstrap.pm: Support OS X 10.6.2

2009-11-01  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix cleanup_debs to use "current arch" in .deb
	filename instead of _ delimiter.

2009-10-18  Augusto Devegili <monipol@users.sourceforge.net>

	* PkgVersion.pm: Fix comment typos

2009-10-17  Augusto Devegili <monipol@users.sourceforge.net>

	* VirtPackage.pm: Slightly faster 64-bit CPU detection

2009-10-17  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: don't test ALL executables of the form /usr/bin/gcc*,
	only the ones we need

2009-09-27  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Support OS X 10.6.1

2009-09-26  Augusto Devegili <monipol@users.sourceforge.net>
